implemented kinde auth to protect dashboard

--- a/package.json
+++ b/package.json
@@ -8,15 +8,23 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "type": "module",
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
+    "@kinde-oss/kinde-auth-nextjs": "^2.3.1",
     "@livepeer/core-web": "^4.1.19",
     "@livepeer/react": "^4.1.19",
+    "@mui/material": "^5.15.20",
+    "@mui/material-nextjs": "^5.15.11",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "hls.js": "^1.5.11",
     "livepeer": "^3.2.7",
-    "next": "14.0.3",
+    "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.1.0",
